Removed Created by Javadoc

--- a/src/main/resources/archetype-resources/src/main/resources/bootstrap.yml
+++ b/src/main/resources/archetype-resources/src/main/resources/bootstrap.yml
@@ -12,4 +12,4 @@ spring:
       server:
         bootstrap: true
         git:
-          uri: https://github.com/Romeh/config.git
+          uri: https://github.com/mrsteffenjo/config.git
