--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -277,8 +277,8 @@
                                 <title>Application manager swagger</title>
                                 <version>0.0.1</version>
                                 <contact>
-                                    <email>mahmoud.romeh@test.com</email>
-                                    <name>Mahmoud Romih</name>
+                                    <email>mr.steffen.jo@test.com</email>
+                                    <name>Steffen Jørgensen</name>
                                 </contact>
                                 <license>
                                     <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
